# Main

./: .env  Cargo.toml  README.md  nohup.out
.github/workflows/: deploy.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250208_092922_create_users_table.rs  m20250213_073143_create_drivers_table.rs  m20250213_164001_create_users_table.rs  m20250215_092124_create_payment_table.rs  m20250217_053312_create_vehicles_table.rs  m20250218_060218_create_ride_table.rs  m20250219_053115_create_cities_table.rs  m20250220_065436_create_settings_table.rs  m20250221_071147_create_support_tickets.rs  m20250221_101629_add_firstname_lastname.rs  m20250224_111441_create_user_profiles.rs  m20250225_070801_create_recent_locations.rs  main.rs
password_hasher/: Cargo.toml  hash_password.rs
password_hasher/src/: main.rs
src/: auth.rs  controllers.rs  db.rs  hash_password.rs  main.rs
src/controllers/: controllers.rs
src/entities/: cities.rs  driverentity.rs  faviorate.rs  helpsupport.rs  payment.rs  recentlocation.rs  rideentity.rs  settings.rs  userentity.rs  userprofile.rs  vehicleentity.rs
src/schema/: schema.rs
