[package]
name = "Arrively-project-main"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arrively-project-main"
path = "src/main.rs"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
tokio-postgres = "0.7"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
rust_decimal = "1.32"
async-std = { version = "1.12", features = ["attributes"] }
bcrypt = "0.15"
sqlx = { version = "0.6", features = ["postgres", "chrono", "runtime-tokio-native-tls"] }
log = "0.4"
env_logger = "0.9"
migration = { path = "./migration" }


sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
sea-orm-migration = "1.1"
