
[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] 
 HEAD


sea-orm-migration = "1.1"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }


tokio = { version = "1", features = ["full"] }
sea-orm-migration = "0.12"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
 e10568085eb9bf2ba6305e4e0e3c7c878e230c89
